[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main/Tower/Tower.gd" type="Script" id=2]
[ext_resource path="res://Main/Tower/WeakTower/WeakTower.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.9664

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.939, 19.6707 )

[node name="Tower" type="Sprite" groups=[
"towers",
]]
scale = Vector2( 2, 2 )
z_index = 2
texture = ExtResource( 3 )
script = ExtResource( 2 )
radius = 100.0
cooldown_time = 1.0
circle_vertices = 24
restricted_color = Color( 1, 0.376471, 0.376471, 1 )

[node name="Range" type="Area2D" parent="."]
show_behind_parent = true
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 26
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="Area"]
position = Vector2( 0, 1.48819 )
scale = Vector2( 0.927428, 0.813392 )
shape = SubResource( 2 )

[node name="Collision" type="StaticBody2D" parent="."]
collision_mask = 17

[node name="Shape" type="CollisionShape2D" parent="Collision"]
position = Vector2( 0, 1.48819 )
scale = Vector2( 0.927428, 0.813392 )
shape = SubResource( 2 )
disabled = true

[node name="RangeUI" type="Polygon2D" parent="."]
show_behind_parent = true
color = Color( 0.835294, 0.835294, 0.835294, 0.533333 )

[node name="TowerControl" type="Control" parent="."]
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 16.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Range" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_Range_area_exited"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="gui_input" from="TowerControl" to="." method="_on_TowerControl_gui_input"]
